<resources>
    <string name="app_name">Sambo</string>
    <string name="first_title">Узнавай новости\nиз мира самбо</string>
    <string name="second_title">Учись у лучших\nспортсменов</string>
    <string name="third_title">Стань частью\nсообщества</string>
    <string name="proceed">Продолжить</string>
    <string name="skip">Пропустить</string>
    <string name="prive">Привет!\n Ты тут впервые?</string>
    <string name="home_name">Главная</string>
    <string name="competition_name">Соревнования</string>
    <string name="courses_name">Курсы</string>
    <string name="profile_name">Мой профиль</string>
    <string name="learn">Обучение</string>
    <string name="main">Главная</string>
    <string name="advice">Совет дня</string>
    <string name="collections">Подборки</string>
    <string name="news">Новости</string>
    <string name="all_news">Все новости</string>
    <string name="competition">Соревнования</string>
    <string name="competition_desc">Из-за ковида соревнования на паузе:(\nСкоро они вернутся, а пока\nтренируйся вместе с нами онлайн!</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ok">Окей</string>
    <string name="image_transition">image_%1d</string>
    <string name="Profile">Мой Профиль</string>
    <string name="n">Изменить \n Фото</string>
    <string name="Name_kons">Константин Константинов</string>
    <string name="liceym">турецкий лицей</string>
    <string name="contacts">Связаться со мной</string>
    <string name="vk_com">vk.com</string>
    <string name="instagramm">instagramm</string>
    <string name="me">обо мне</string>
    <string name="kms">КМС Самбо</string>
</resources>