<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBlue">

    <TextView
        android:id="@+id/text_Proile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="130dp"
        android:layout_marginBottom="17dp"
        android:fontFamily="@font/gilroy_bold"
        android:text="@string/Profile"
        android:textColor="@color/colorWhite"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nested"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="17dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_Proile">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constrMain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/backgr_forprofilefragment">

            <androidx.cardview.widget.CardView
                android:id="@+id/cardview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="15dp"
                android:background="@drawable/corner_profile"
                app:cardCornerRadius="30dp"
                app:cardElevation="3dp"
                app:layout_constraintTop_toTopOf="@id/constrMain">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/constr_two"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="@id/cardview">


                    <com.google.android.material.imageview.ShapeableImageView
                        android:id="@+id/image"
                        android:layout_width="90dp"
                        android:layout_height="90dp"
                        android:layout_marginStart="30dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginEnd="210dp"
                        android:scaleType="centerCrop"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:background="@color/colorGrey"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/changePhoto"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="136dp"
                        android:layout_marginTop="45dp"
                        android:layout_marginEnd="98dp"
                        android:clickable="true"
                        android:focusable="true"
                        android:fontFamily="@font/gilroy_semibold"
                        android:text="@string/n"
                        android:textColor="@color/colorBlue"
                        android:textSize="16sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/constant"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="35dp"
                        android:layout_marginTop="130dp"
                        android:layout_marginEnd="97dp"
                        android:fontFamily="@font/gilroy_semibold"
                        android:text="@string/Name_kons"
                        android:textColor="@color/colorBlue"
                        android:textSize="16sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/school"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:fontFamily="@font/gilroy_medium"
                        android:text="@string/liceym"
                        android:textColor="@color/darkness"
                        android:textSize="16sp"
                        app:layout_constraintStart_toStartOf="@id/constant"
                        app:layout_constraintTop_toBottomOf="@id/constant" />

                    <TextView
                        android:id="@+id/contact"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="30dp"
                        android:fontFamily="@font/gilroy_medium"
                        android:text="@string/contacts"
                        android:textColor="@color/colorBlue"
                        android:textSize="16sp"
                        app:layout_constraintStart_toStartOf="@id/school"
                        app:layout_constraintTop_toBottomOf="@id/school" />

                    <TextView
                        android:id="@+id/vk"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:fontFamily="@font/gilroy_medium"
                        android:text="@string/vk_com"
                        android:textColor="@color/darkness"
                        android:textSize="16sp"
                        app:layout_constraintStart_toStartOf="@id/contact"
                        app:layout_constraintTop_toBottomOf="@id/contact" />

                    <TextView
                        android:id="@+id/instagramm"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:fontFamily="@font/gilroy_medium"
                        android:text="@string/instagramm"
                        android:textColor="@color/darkness"
                        android:textSize="16sp"
                        app:layout_constraintStart_toStartOf="@id/vk"
                        app:layout_constraintTop_toBottomOf="@id/vk" />

                    <TextView
                        android:id="@+id/me"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="30dp"
                        android:fontFamily="@font/gilroy_medium"
                        android:text="@string/me"
                        android:textColor="@color/colorBlue"
                        android:textSize="16sp"
                        app:layout_constraintStart_toStartOf="@id/instagramm"
                        app:layout_constraintTop_toBottomOf="@id/instagramm" />

                    <TextView
                        android:id="@+id/status"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:fontFamily="@font/gilroy_medium"
                        android:text="@string/kms"
                        android:textColor="@color/darkness"
                        android:textSize="16sp"
                        app:layout_constraintStart_toStartOf="@id/me"
                        app:layout_constraintTop_toBottomOf="@id/me" />

                    <ImageView
                        android:layout_width="55dp"
                        android:layout_height="55dp"
                        android:layout_marginStart="260dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="15dp"
                        android:paddingBottom="16dp"
                        android:src="@drawable/ic_pencil"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/status" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="32.5dp"
                app:layout_constraintTop_toBottomOf="@id/cardview">

                <ImageView
                    android:id="@+id/user"
                    android:layout_width="23dp"
                    android:layout_height="27dp"
                    android:layout_marginStart="42dp"
                    android:layout_marginTop="30dp"
                    android:src="@drawable/ic_user"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/usertext"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_marginStart="18dp"
                    android:layout_marginTop="33dp"
                    android:fontFamily="@font/gilroy_semibold"
                    android:text="Настройка личной информации"
                    android:textColor="@color/colorBlue"
                    android:textSize="16sp"
                    app:layout_constraintStart_toEndOf="@id/user"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/quest"
                    android:layout_width="23dp"
                    android:layout_height="27dp"
                    android:layout_marginStart="42dp"
                    android:layout_marginTop="21dp"
                    android:src="@drawable/ic_project"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/user" />

                <TextView
                    android:id="@+id/questtext"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="27dp"
                    android:fontFamily="@font/gilroy_semibold"
                    android:text="О проекте"
                    android:textColor="@color/colorBlue"
                    android:textSize="16sp"
                    app:layout_constraintStart_toEndOf="@id/quest"
                    app:layout_constraintTop_toBottomOf="@id/usertext" />

                <ImageView
                    android:id="@+id/locate"
                    android:layout_width="23dp"
                    android:layout_height="27dp"
                    android:layout_marginStart="42dp"
                    android:layout_marginTop="20dp"
                    android:src="@drawable/ic_school_site"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/quest" />

                <TextView
                    android:id="@+id/loctText"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="28dp"
                    android:fontFamily="@font/gilroy_semibold"
                    android:text="Смотреть карту школ на сайте"
                    android:textColor="@color/colorBlue"
                    android:textSize="16sp"
                    app:layout_constraintStart_toEndOf="@id/locate"
                    app:layout_constraintTop_toBottomOf="@id/questtext" />

                <ImageView
                    android:id="@+id/exit"
                    android:layout_width="23dp"
                    android:layout_height="27dp"
                    android:layout_marginStart="42dp"
                    android:layout_marginTop="57dp"
                    android:src="@drawable/ic_exit"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/locate" />

                <TextView
                    android:id="@+id/ext_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="14dp"
                    android:layout_marginTop="66dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:fontFamily="@font/gilroy_semibold"
                    android:text="Выход"
                    android:textColor="@color/colorBlue"
                    android:textSize="16sp"
                    app:layout_constraintStart_toEndOf="@id/exit"
                    app:layout_constraintTop_toBottomOf="@id/loctText" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>