<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBlue">

    <TextView
        android:id="@+id/tvMain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp40"
        android:layout_marginTop="@dimen/dp40"
        android:fontFamily="@font/gilroy_bold"
        android:text="@string/main"
        android:textColor="@android:color/white"
        android:textSize="@dimen/sp30"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/dp20"
        android:orientation="vertical"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvMain">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/firstLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerViewCards"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp30"
                android:background="@drawable/bg_round_frame"
                android:paddingBottom="@dimen/dp20"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/recyclerViewCards">

                <androidx.cardview.widget.CardView
                    android:id="@+id/btnAdvice"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp20"
                    android:layout_marginTop="@dimen/dp40"
                    android:layout_marginEnd="@dimen/dp20"
                    android:background="@color/colorWhiteSecond"
                    android:clickable="true"
                    android:focusable="true"
                    app:cardCornerRadius="@dimen/dp20"
                    app:layout_constraintTop_toTopOf="parent">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/ic_advice"
                        app:layout_constraintTop_toTopOf="parent">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/dp30"
                            android:layout_marginTop="@dimen/dp48"
                            android:layout_marginBottom="@dimen/dp48"
                            android:text="@string/advice"
                            android:textColor="@android:color/white"
                            android:textSize="@dimen/sp24"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="@dimen/dp16"
                            android:background="@drawable/ic_arrow_button"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                    </androidx.constraintlayout.widget.ConstraintLayout>

                </androidx.cardview.widget.CardView>

                <TextView
                    android:id="@+id/tvCollections"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp44"
                    android:layout_marginTop="@dimen/dp40"
                    android:layout_marginEnd="@dimen/dp20"
                    android:fontFamily="@font/gilroy_medium"
                    android:text="@string/collections"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/sp24"
                    app:layout_constraintTop_toBottomOf="@id/btnAdvice" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerViewCollections"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp20"
                    android:orientation="horizontal"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_constraintTop_toBottomOf="@id/tvCollections" />

                <TextView
                    android:id="@+id/tvNews"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp44"
                    android:layout_marginTop="@dimen/dp36"
                    android:layout_marginEnd="@dimen/dp20"
                    android:fontFamily="@font/gilroy_medium"
                    android:text="@string/news"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/sp24"
                    app:layout_constraintTop_toBottomOf="@id/recyclerViewCollections" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerViewNews"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp20"
                    android:orientation="vertical"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_constraintTop_toBottomOf="@id/tvNews" />

                <Button
                    android:id="@+id/btnAllNews"
                    android:layout_width="@dimen/dp260"
                    android:layout_height="@dimen/dp50"
                    android:layout_marginStart="@dimen/dp50"
                    android:layout_marginTop="@dimen/dp20"
                    android:layout_marginEnd="@dimen/dp50"
                    android:background="@drawable/bg_red_button"
                    android:fontFamily="@font/gilroy_semibold"
                    android:text="@string/all_news"
                    android:textAllCaps="false"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/sp16"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/recyclerViewNews" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>